--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "push": "npm run build && scp -r dist/* root@47.104.200.246:/home/vue-project4-dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.2.1",
